Update CSS, fix spacing & login btn

--- a/storefront-child/assets/css/login-register.css
+++ b/storefront-child/assets/css/login-register.css
@@ -281,7 +281,7 @@ form p label input + span {
     }
 
     .login-register #customer_login form button {
-        margin: 30px auto 15px;
+        margin: 100px auto 15px;
     }
 
     .login-register form p label input + span:before {
