--- a/storefront-child/assets/css/store-child.css
+++ b/storefront-child/assets/css/store-child.css
@@ -28,7 +28,7 @@ h1.entry-title {
 .phone_login{
     padding-bottom: 0;
     height: auto;
-    margin-top: 20vh;
+    margin-top: 100px;
 }
 .myaccount-login-page {
     padding-bottom: 0;
@@ -1031,8 +1031,12 @@ body.login-register.home .site-header{
 .form-btn-login{
     text-align: center;
 }
+.login-register #customer_login form button{
+    transition:  width 0.3s ease-in-out max-width 0.3s ease-in-out color 0s linear;
+}
 .login-register #customer_login form button.login-click{
-    font-size: 0;
+    /* font-size: 0; */
+    color: transparent;
     height: 50px;
     width: 50px !important;
     border: none;
